fixed section mobile overflow and font size

--- a/assets/styles/_media.scss
+++ b/assets/styles/_media.scss
@@ -1,5 +1,6 @@
 @media screen and (max-width: 768px) {
   header {
+    overflow: hidden;
     .navbar {
       position: fixed;
       top: 0;
@@ -84,6 +85,7 @@
     }
   }
   section {
-    font-size: 3rem;
+    font-size: 2rem;
+    overflow: hidden;
   }
 }
