--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,7 @@ ul {
 
 //nav bar start here
 header {
+  overflow: hidden;
   height: 80px;
   position: fixed;
   z-index: 99;
